syntax = "proto3";

package mira;
import "proto/common.proto";
option go_package = "ida-access-service-mock/mirapb";

// 获取包含隐私信息的数据源连接信息接口
message GetPrivateDBConnInfoRequest {
  string requestId = 1; // 请求ID
  int32 dbConnId = 2;   // 数据源连接id
}

message GetPrivateDBConnInfoResp {
  int32 dbConnId = 1;   // 数据源连接ID
  string connName = 2;  // 数据源连接名称
  string host = 3;      // 数据源地址
  int32 port = 4;       // 端口号
  int32 type = 5;       // 数据库类型： 1.mysql，2.kingbase，3.llm-hub
  string username = 6;  // 数据库用户名
  string password = 7;  // 数据库密码
  string dbName = 8;    // 数据库名称
  string createdAt = 10; // 创建时间
  string llmHubToken = 11; // 连接 llm-hub 类型数据源的 token
}

message GetPrivateDBConnInfoResponse {
  BaseResponse baseResponse = 1;
  GetPrivateDBConnInfoResp data = 2;
}

// 数据资产类型枚举
enum DataProductType {
  DATA_PRODUCT_TYPE_DATASET = 0; // 数据集
  DATA_PRODUCT_TYPE_LLM = 1;     // 大模型语料
}

// 通过资产英文名称获取资产详情
message GetPrivateAssetInfoByEnNameRequest {
  BaseRequest baseRequest = 1;
  string assetEnName = 2; // 资产英文名称
}

message AssetInfo {
  string assetId = 1;
  string assetNumber = 2;
  string assetName = 3;
  string assetEnName = 4;
  int32 assetType = 5;
  string scale = 6;
  string cycle = 7;
  string timeSpan = 8;
  string holderCompany = 9;
  string intro = 10;
  string txId = 11;
  string uploadedAt = 12;
  DataInfo dataInfo = 13;
  int32 visibleType = 14;
  string participantId = 15;
  string participantName = 16;
  string AccountAlias = 17;
  DataProductType dataProductType = 18; // 数据产品类型
}

message DataInfo {
  string dbName = 1;
  string tableName = 2;
  repeated SaveTableColumnItem itemList = 3;
  int32  dataSourceId = 4;
}

message SaveTableColumnItem {
  string name = 1;
  string dataType = 2;
  int32 dataLength = 3;
  string description = 4;
  int32 isPrimaryKey = 5;
  int32 privacyQuery = 6;
}

message GetPrivateAssetInfoByEnNameResponse {
  BaseResponse baseResponse = 1;
  AssetInfo data = 2;
}

// 资产列表相关定义
message AssetList {
  Pagination pagination = 1;
  repeated AssetItem list = 2;
}

message AssetItem {
  string assetId = 1;
  string assetNumber = 2;
  string assetName = 3;
  string holderCompany = 4;
  string intro = 5;
  string txId = 6;
  string uploadedAt = 7;
  string chainName = 8;
  string participantId = 9;
  string participantName = 10;
  string alias = 11;
  DataProductType dataProductType = 12; // 数据产品类型
}

// 获取资产列表请求
message GetPrivateAssetListRequest {
  BaseRequest baseRequest = 1;
  int32 pageNumber = 2;  // 当前页
  int32 pageSize = 3;     // 每页条数
  repeated Filter filters = 4; // 搜索条件
}

// 获取资产列表响应
message GetPrivateAssetListResponse {
  BaseResponse baseResponse = 1;
  AssetList data = 2;
}

// 获取资产详情请求（通过ID）
message GetPrivateAssetInfoRequest {
  string requestId = 1; // 请求ID
  int32 assetId = 2;    // 资产自增id
}

// 获取资产详情响应（通过ID）
message GetPrivateAssetInfoResponse {
  BaseResponse baseResponse = 1;
  AssetInfo data = 2;
}

// 创建数据源连接接口
message CreateDataSourceRequest {
  BaseRequest baseRequest = 1;
  int32 dbPattern = 2;  // 数据库模式：1.关系型，2.非关系型
  int32 dbType = 3;     // 数据库类型：1.mysql，2.kingbase，3.llm-hub, 4.TIDB, 5.TDSQL
  string name = 4;      // 数据源名称
  string host = 5;      // 数据源地址
  int32 port = 6;       // 端口号
  string username = 7;  // 数据库用户名
  string password = 8;  // 数据库密码
  string instanceName = 9; // 数据库名称
  string llmHubToken = 10; // 连接 llm-hub 类型数据源的 token
  string address = 11;  // 链帐户
  string chainInfoId = 12; // 数据空间sid
  int64 TenantId = 13;  // 租户id资源归属id
  int64 Uin = 14;       // 用户唯一id
}

message CreateDataSourceResponse {
  BaseResponse baseResponse = 1;
  DataSourceId data = 2;
}

message DataSourceId {
  int32 id = 1;
}

// 创建资产接口
message CreateAssetRequest {
  BaseRequest baseRequest = 1;
  ChainInfo chainInfo = 2;        // 链空间、账户等相关信息
  ResourceBasic resourceBasic = 3; // 资源基本信息
  Table table = 4;                // 库表资源
  File file = 5;                  // 文件资源
}

message ChainInfo {
  string chainInfoId = 1;  // 链空间唯一标识
  string address = 2;       // 链账户
  string cid = 3;          // 连接器逻辑id
}

message ResourceBasic {
  string resourceNumber = 1;  // 数据资源标识
  string zhName = 2;          // 资源中文名
  string enName = 3;          // 资源英文名
  string description = 4;     // 资源描述
  int32 scaleValue = 5;       // 数据规模值
  int32 scaleUnit = 6;        // 数据规模单位，1-MB
  string useLimit = 7;        // 使用限制
  int32 type = 8;            // 资源类型，1-库表，2-文件
  int32 dataType = 9;        // 数据类型，1-个人数据，2-企业数据，3-公共数据
  string otherNote = 10;      // 其他说明
  int32 authorized = 11;      // 是否需授权使用，1-不需要，2-需要
  int32 machineLearning = 12; // 是否支持机器学习，1-不支持，2-支持
}

message Table {
  int32 dataSourceId = 1;      // 数据源连接ID
  string tableName = 2;         // 表名
  repeated TableColumn columns = 3; // 字段列表
}

message TableColumn {
  string originName = 1;    // 字段原始名称
  string name = 2;          // 字段名称
  string dataType = 3;      // 字段类型
  int32 dataLength = 4;    // 字段长度
  int32 primaryKey = 5;     // 是否为主键，1-否，2-是
  int32 notNull = 6;        // 是否非空，1-否，2-是
  string description = 7;   // 字段描述
  int32 level = 8;         // 分级分类
  string dataExample = 9;   // 数据示例
}

message File {
  int32 dataSourceId = 1;      // 数据源连接ID
  string path = 2;             // 文件路径
  repeated FileItem files = 3; // 文件列表
}

message FileItem {
  string name = 1;      // 文件名称
  string size = 2;      // 文件大小
  string updatedAt = 3; // 更新时间
  int32 fileType = 4;   // 文件类型，1-文件，2-文件夹
}

message CreateAssetResponse {
  BaseResponse baseResponse = 1;
  ResourceId data = 2;
}

message ResourceId {
  int32 id = 1;
}

// 更新资产接口
message UpdateAssetRequest {
  BaseRequest baseRequest = 1;
  int32 assetId = 2;              // 资产ID
  ResourceBasic resourceBasic = 3; // 资源基本信息（可选，只更新提供的字段）
  Table table = 4;                // 库表资源（可选）
  File file = 5;                  // 文件资源（可选）
}

message UpdateAssetResponse {
  BaseResponse baseResponse = 1;
  AssetInfo data = 2;             // 更新后的资产信息
}

// 删除资产接口
message DeleteAssetRequest {
  BaseRequest baseRequest = 1;
  int32 assetId = 2;              // 资产ID
}

message DeleteAssetResponse {
  BaseResponse baseResponse = 1;
}

// IDA Access Service 定义
service MiraIdaAccess {
  // 获取包含隐私信息的数据源连接信息接口
  rpc GetPrivateDBConnInfo(GetPrivateDBConnInfoRequest) returns (GetPrivateDBConnInfoResponse);
  
  // 通过资产英文名称获取资产详情
  rpc GetPrivateAssetInfoByEnName(GetPrivateAssetInfoByEnNameRequest) returns (GetPrivateAssetInfoByEnNameResponse);
  
  // 获取资产列表
  rpc GetPrivateAssetList(GetPrivateAssetListRequest) returns (GetPrivateAssetListResponse);
  
  // 通过资产ID获取资产详情
  rpc GetPrivateAssetInfo(GetPrivateAssetInfoRequest) returns (GetPrivateAssetInfoResponse);
  
  // 创建数据源
  rpc CreateDataSource(CreateDataSourceRequest) returns (CreateDataSourceResponse);
  
  // 创建资产
  rpc CreateAsset(CreateAssetRequest) returns (CreateAssetResponse);
  
  // 更新资产
  rpc UpdateAsset(UpdateAssetRequest) returns (UpdateAssetResponse);
  
  // 删除资产
  rpc DeleteAsset(DeleteAssetRequest) returns (DeleteAssetResponse);
}

// 注意：需要重新运行 protoc 生成 Go 代码
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/*.proto

